Se agrego el componente de Done-module al finalizar cada evaluacion de modulo y correccion de animaciones y texto

--- a/src/app/pages/components/done-module/done-module.component.html
+++ b/src/app/pages/components/done-module/done-module.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="d-flex flex-column justify-content-center align-items-center">
         <img src="../../../../assets/aplause.gif" alt="Aplauso gif" width="120px">
-        <h3 class="fs-2"><strong> FELICIDADES COMPLETASTE EXITOSAMENTE EL MODULO {{noModulo}}</strong></h3>
+        <h3 class="fs-2"><strong> FELICIDADES COMPLETASTE EXITOSAMENTE EL <div style="color: white; text-align: center;">MODULO {{noModulo}}</div></strong></h3>
         <p class="fs-3">Tu avance ha sido guardado y aparecera en tu perfil</p>
         <p class="fs-4">Serás redirigido al menú de inicio en: <strong>{{contador}}</strong></p>
       </div>
