--- a/src/app/pages/components/formm1/formm1.component.html
+++ b/src/app/pages/components/formm1/formm1.component.html
@@ -74,3 +74,6 @@
     <button (click)="verificarRespuestas()" type="submit" href class="btn btn-primary">Enviar Respuestas</button>
   </div>
 </form>
+@defer (when finalizadoP) {
+  <done-module noModulo="1"></done-module>
+}
