--- a/src/app/pages/page/modulo6/modulo6.component.scss
+++ b/src/app/pages/page/modulo6/modulo6.component.scss
@@ -8,6 +8,9 @@
     }
   }
 
+  .animate-on-scroll{
+    opacity: 0;
+  }
 
   .portada {
     background-image: url(../../../../assets/img-modulo6/2.svg);
