--- a/src/app/pages/components/retro-act4/retro-act4.component.scss
+++ b/src/app/pages/components/retro-act4/retro-act4.component.scss
@@ -12,11 +12,6 @@
     font-weight: 500;
   }
 
-  input[type="text"]{
-    border: none;
-    border-bottom: #3765ad 2px solid;
-    text-transform: lowercase;
-  }
   p{
     font-size: 1.1rem;
     margin: 10px 0;
@@ -37,5 +32,25 @@
   .success{
     background-color: #419941;
     color: white;
+  }
+
+  input[type="submit"]{
+    background-color: #0056b3;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    &:hover{
+      background-color: #007bff;
+    }
+  }
+  input[type="text"]{
+    padding: 0 10px;
+    color: #3765ae;
+    font-weight: 700;
+    margin: 5px 0;
+    border: 2px solid #3765ae;
+    border-radius: 10px;
   }
 }
