--- a/src/app/pages/page/modulo3/modulo3.component.html
+++ b/src/app/pages/page/modulo3/modulo3.component.html
@@ -1,47 +1,45 @@
 <div class="modulo3">
 
   <section class="inicio-m3 d-flex">
-    <div class="container animated-element" (window:scroll)="onScrollAnimated()">
+    <div class="container animate-on-scroll" style="opacity: 0;" data-animate="animate__backInRight">
       <h1 class="title">Módulo 3</h1>
       <img src="assets/img-modulo3/cooperativas 2.svg" class="subtitle" alt="cooperativas 2">
     </div>
   </section>
 
-  @defer(on viewport){
-    <section class="objetivo-general">
-      <div class="container">
-        <div class="row justify-content-center align-items-center mb-5">
-          <div class="col-12 col-md-6 d-flex justify-content-center mb-4">
-            <img class="obj-gen-img fade-in-left" (window:scroll)="onScrollFadeInLeft()" src="assets/img-modulo3/objetivo-general.svg" alt="cinta objetivo general">
-          </div>
-          <div class="col-12 col-md-6 pt-5 pt-md-0 d-flex justify-content-center">
-            <img class="fade-in-right" (window:scroll)="onScrollFadeInRight()" src="assets/img-modulo3/og-engranajes.svg" alt="engranajes">
-          </div>
+  <section class="objetivo-general">
+    <div class="container">
+      <div class="row justify-content-center align-items-center mb-5">
+        <div class="col-12 col-md-6 d-flex justify-content-center mb-4">
+          <img class="obj-gen-img fade-in-left animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft"
+            src="assets/img-modulo3/objetivo-general.svg" alt="cinta objetivo general">
         </div>
-
-        <div class="tema ms-md-5 pt-5 text-center text-md-start fade-in-left">
-          <h2>TEMA</h2>
-          <ul>
-            <li>• Elementos que las integran</li>
-            <li>• Legislación y estructura</li>
-            <li>• La Asamblea General</li>
-            <li>• Actividad: completa el mapa conceptual</li>
-            <li>• Gobierno Corporativo: Consejo de Administración</li>
-            <li>• Gobierno Corporativo: Consejo de Vigilancia</li>
-            <li>• Gobierno Corporativo: Dirección General</li>
-            <li>• Retroalimentación</li>
-          </ul>
+        <div class="col-12 col-md-6 pt-5 pt-md-0 d-flex justify-content-center">
+          <img class="fade-in-right animate-on-scroll" style="opacity: 0;" data-animate="animate__backInRight"
+            src="assets/img-modulo3/og-engranajes.svg" alt="engranajes">
         </div>
       </div>
-    </section>
-  } @placeholder {
-    <div class=""></div>
-  }
+
+      <div class="tema ms-md-5 pt-5 text-center text-md-start fade-in-left">
+        <h2>TEMA</h2>
+        <ul>
+          <li>• Elementos que las integran</li>
+          <li>• Legislación y estructura</li>
+          <li>• La Asamblea General</li>
+          <li>• Actividad: completa el mapa conceptual</li>
+          <li>• Gobierno Corporativo: Consejo de Administración</li>
+          <li>• Gobierno Corporativo: Consejo de Vigilancia</li>
+          <li>• Gobierno Corporativo: Dirección General</li>
+          <li>• Retroalimentación</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
 
   <section class="introduccion">
     <div class="container">
-      <div class="hoja-circulo jackInTheBox" (window:scroll)="onScrollJackInTheBox()">
+      <div class="hoja-circulo animate-on-scroll" style="opacity: 0;" data-animate="animate__jackInTheBox">
         <div class="row justify-content-center">
 
           <img class="" src="assets/img-modulo3/intro-monedas.svg" alt="monedas azules">
@@ -86,8 +84,8 @@
     <div class="container">
 
       <div class="body">
-        <h2>ELEMENTOS DE UNA SOCIEDAD COOPERATIVA</h2>
-        <p>Una Sociedad Cooperativa se diferencia de una
+        <h2 class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">ELEMENTOS DE UNA SOCIEDAD COOPERATIVA</h2>
+        <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">Una Sociedad Cooperativa se diferencia de una
           empresa tradicional por su forma de organización y
           administración, se integra por personas físicas llamadas
           Socios, con intereses comunes de solidaridad, esfuerzo
@@ -102,13 +100,13 @@
           voz, así como voto en la Asamblea General, con el
           propósito de cubrir necesidades colectivas que son
           administradas y vigiladas por el Gobierno Corporativo.<br><br>
-          <b>A continuación, se describen los elementos de una
+          <b class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">A continuación, se describen los elementos de una
             Sociedad Cooperativa:</b>
         </p>
 
       </div>
       <div class="row">
-        <div class="hexagon">
+        <div class="hexagon animate-on-scroll" style="opacity: 0;" data-animate="animate__swing" style="animation-delay: 0ms;">
           <h2>Socios</h2>
           <p>Grupo de personas que
             comparten intereses y
@@ -117,7 +115,7 @@
             para conformar una
             Sociedad Cooperativa. </p>
         </div>
-        <div class="hexagon">
+        <div class="hexagon animate-on-scroll" style="opacity: 0;" data-animate="animate__swing" style="animation-delay: 500ms;">
           <h2>Asamblea General</h2>
           <p>Es el máximo órgano de
             Gobierno de las Sociedades
@@ -126,7 +124,7 @@
             las decisiones importantes
             en forma democrática.</p>
         </div>
-        <div class="hexagon">
+        <div class="hexagon animate-on-scroll" style="opacity: 0;" data-animate="animate__swing" style="animation-delay: 1000ms;">
           <h2>Reglas y Normas</h2>
           <p>Son importantes para el buen
             funcionamiento de la
@@ -139,7 +137,7 @@
             Constitutivas aprobadas y
             formalizadas.</p>
         </div>
-        <div class="hexagon">
+        <div class="hexagon animate-on-scroll" style="opacity: 0;" data-animate="animate__swing" style="animation-delay: 500ms;">
           <h2>Principios y Valores Cooperativos</h2>
           <p>Conjunto de lineamientos éticos
             para orientar la participación en la
@@ -150,7 +148,7 @@
             Sociedad Cooperativa de una
             empresa tradicional.</p>
         </div>
-        <div class="hexagon">
+        <div class="hexagon animate-on-scroll" style="opacity: 0;" data-animate="animate__swing" style="animation-delay: 1000ms;">
           <h2>Gobierno Corporativo</h2>
           <p>Encargados de administrar y
             vigilar el buen funcionamiento
@@ -167,10 +165,10 @@
   <section class="legislacion-socaps">
     <div class="container">
 
-      <h2>LEGISLACIÓN DE LAS SOCIEDADES
+      <h2 class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">LEGISLACIÓN DE LAS SOCIEDADES
         COOPERATIVAS DE AHORRO Y PRESTAMO
         EN MÉXICO</h2>
-      <p>
+      <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">
         El H. Congreso de la Unión reconoció que las Sociedades Cooperativas de Ahorro
         y Préstamo (SOCAP) y las Sociedades Financieras Populares (SOFIPOS), tienen
         naturaleza y fines distintos, por lo que su marco legal también es diferente.
@@ -183,18 +181,18 @@
         <table>
           <thead>
             <tr class="text-center">
-              <th scope="col">NOMBRE
+              <th scope="col" class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">NOMBRE
                 <hr class="d-none d-lg-block">
               </th>
-              <th scope="col">CONTEXTO DEL MARCO LEGAL
+              <th scope="col" class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">CONTEXTO DEL MARCO LEGAL
                 <hr>
               </th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-1.svg" alt="ley general de sociedades cooperativas"></td>
-              <td>Tiene por objeto regular la constitución,
+              <td><img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft" src="assets/img-modulo3/tabla-t-1.svg" alt="ley general de sociedades cooperativas"></td>
+              <td class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp">Tiene por objeto regular la constitución,
                 organización, funcionamiento y extinción
                 de las Sociedades Cooperativas, así como
                 Organismos en que libremente se agrupen,
@@ -213,8 +211,8 @@
               </td>
             </tr>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-2.svg" alt="lrascap"></td>
-              <td>En 2009, el Congreso General de los
+              <td><img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft" src="assets/img-modulo3/tabla-t-2.svg" alt="lrascap"></td>
+              <td class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp">En 2009, el Congreso General de los
                 Estados Unidos Mexicanos expidió la Ley
                 para Regular las Actividades de las
                 Sociedades Cooperativas de Ahorro y
@@ -233,8 +231,8 @@
               </td>
             </tr>
             <tr>
-              <td><img src="assets/img-modulo3/tabla-t-3.svg" alt="disposiciones socaps"></td>
-              <td>Regulación prudencial y criterios contables
+              <td><img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft" src="assets/img-modulo3/tabla-t-3.svg" alt="disposiciones socaps"></td>
+              <td class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp">Regulación prudencial y criterios contables
                 que deberán adoptar las SOCAP´S con la
                 finalidad de preservar su liquidez, solvencia
                 y estabilidad.<br><br>
@@ -250,10 +248,10 @@
 
       <div class="row mt-4">
         <div class="col-12 col-md-6 mb-4">
-          <img src="assets/img-modulo3/legsocoops-img.svg" alt="cinta azul maso">
+          <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInDown" src="assets/img-modulo3/legsocoops-img.svg" alt="cinta azul maso">
         </div>
         <div class="col-12 col-md-6">
-          <img src="assets/img-modulo3/legsocoops-img2.svg" alt="cinta azul libro">
+          <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInDown" src="assets/img-modulo3/legsocoops-img2.svg" alt="cinta azul libro">
         </div>
       </div>
     </div>
@@ -263,14 +261,14 @@
 
     <div class="container">
       <div class="hoja-inclinada">
-        <img src="assets/img-modulo3/estrucutra-socoops.svg" alt="estrucutra de las socaps">
-        <p>La estructura de la administración y la organización de las Sociedades Cooperativas de Ahorro
+        <img class="animate-on-scroll" data-animate="animate__pulse" src="assets/img-modulo3/estrucutra-socoops.svg" alt="estrucutra de las socaps">
+        <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">La estructura de la administración y la organización de las Sociedades Cooperativas de Ahorro
           y Préstamo se establece sobre sus Órganos de Gobierno, donde los Socios integrantes cumplen
           funciones y roles importantes.<br><br>
           De manera general, la dirección, administración y vigilancia interna de las Sociedades
           Cooperativas, estará a cargo de los Órganos siguientes:</p>
-        <img src="assets/img-modulo3/etiquetas.svg" alt="etiquetas">
-        <img src="assets/img-modulo3/diagrama-mano.svg" alt="diagrama mano">
+        <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp" src="assets/img-modulo3/etiquetas.svg" alt="etiquetas">
+        <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp" src="assets/img-modulo3/diagrama-mano.svg" alt="diagrama mano">
       </div>
 
     </div>
@@ -281,12 +279,12 @@
     <div class="container">
       <div class="hoja-top">
 
-        <img src="assets/img-modulo3/titulo-asable-general.svg" alt="titulo asable general">
+        <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft" src="assets/img-modulo3/titulo-asable-general.svg" alt="titulo asable general">
 
         <div class="row">
 
           <div class="col-12">
-            <p class="intro">La Asamblea General es el órgano supremo en las Sociedades Cooperativas de Ahorro y
+            <p class="intro" class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">La Asamblea General es el órgano supremo en las Sociedades Cooperativas de Ahorro y
               Préstamo. Se integra por los mismos Socios y que funciona bajo los principios de voz y mayoría
               de votos para la toma de las decisiones más importantes de estas, sus acuerdos obligan a
               todos los Socios, presentes, ausentes y disidentes a cumplirlos, siempre que se hubieren tomado
@@ -296,7 +294,7 @@
           </div>
 
           <div class="col-12 col-md-8">
-            <div class="block verde">
+            <div class="block verde" class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft">
               Las instancias que podrán convocar a una Asamblea
               General Ordinaria o Extraordinaria son: <br><br>
               <ul>
@@ -321,17 +319,17 @@
           </div>
 
           <div class="col-12 col-md-4">
-            <img src="assets/img-modulo3/voto.svg" alt="cita voto">
+            <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight" src="assets/img-modulo3/voto.svg" alt="cita voto">
           </div>
           <div class="col-12">
-            <div class="block azul">
+            <div class="block azul animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp">
               <p>A continuación, procederemos a mencionar algunas de las características y diferencias
                 más significativas que presentan las Asambleas Generales Ordinarias y Extraordinarias, en
                 las Sociedades Cooperativas de Ahorro y Préstamo:</p>
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="block azul">
+            <div class="block azul animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft">
               <h3>Asamblea General Ordinaria:</h3>
               <ul>
                 <li> Se celebrará dentro de los primeros
@@ -354,7 +352,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="block verde">
+            <div class="block verde animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight">
               <h3>Asamblea General Extraordinaria:</h3>
               <ul>
                 <li> Se celebrará en cualquier tiempo
@@ -370,7 +368,7 @@
                   presentes.</li>
               </ul>
             </div>
-            <img src="assets/img-modulo3/voto-cinta.svg" alt="voto cinta">
+            <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight" src="assets/img-modulo3/voto-cinta.svg" alt="voto cinta">
           </div>
 
         </div>
@@ -381,13 +379,13 @@
 
   <section class="consejo-administracion py-5">
     <div class="container">
-      <div class="hoja-right">
+      <div class="hoja-right animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight">
         <h1>GOBIERNO CORPORATIVO:
           CONSEJO DE ADMINISTRACIÓN
         </h1>
         <div class="container">
 
-          <p>
+          <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">
             El Consejo de Administración es el Órgano Ejecutivo de la Asamblea General que tendrá
             la representación de la Sociedad Cooperativa. <br><br>
             De acuerdo a lo establecido en la Ley General de Sociedades Cooperativas, el
@@ -407,7 +405,7 @@
             Sociedad Cooperativa y por su monto o importancia, necesiten de tal autorización.
           </p>
 
-          <img src="assets/img-modulo3/six-img.svg" alt="Notas azules y blancas">
+          <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp" src="assets/img-modulo3/six-img.svg" alt="Notas azules y blancas">
 
         </div>
       </div>
@@ -416,12 +414,12 @@
 
   <section class="consejo-vigilacion">
     <div class="container">
-      <div class="hoja-right">
+      <div class="hoja-right animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight">
         <h1>GOBIERNO CORPORATIVO:
           CONSEJO DE ADMINISTRACIÓN
         </h1>
         <div class="container">
-          <p>
+          <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">
             El Consejo de Vigilancia es el órgano encargado de supervisar el funcionamiento interno
             de la Sociedad Cooperativa, así como el cumplimiento de sus estatutos y demás
             normatividad que le es aplicable. <br><br>
@@ -445,7 +443,7 @@
             funcionamiento de la Cooperativa y por el cumplimiento de las normas y reglas
             establecidas.
           </p>
-          <img src="assets/img-modulo3/two-img.svg" alt="hojas con ilustraciones">
+          <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInUp" src="assets/img-modulo3/two-img.svg" alt="hojas con ilustraciones">
         </div>
       </div>
     </div>
@@ -454,11 +452,11 @@
   <section class="director-gerente-general asamblea-general">
 
     <div class="container">
-      <div class="hoja-top">
+      <div class="hoja-top animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInRight">
         <h1>GOBIERNO CORPORATIVO:
           CONSEJO DE ADMINISTRACIÓN
         </h1>
-        <p>El Director o Gerente General es la persona contratada por el Consejo de Administración
+        <p class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeIn">El Director o Gerente General es la persona contratada por el Consejo de Administración
           para que en forma profesional y especializada ejecute los acuerdos tomados por este
           órgano de gobierno y la Asamblea, así como los planes y estrategias de la Sociedad. <br><br>
           El Director o Gerente General de las Sociedades Cooperativas de Ahorro y Préstamo,
@@ -471,7 +469,7 @@
           comités de la Cooperativa, representar a la Cooperativa en los actos que determinen las
           Bases Constitutivas</p>
 
-        <img src="assets/img-modulo3/two-img-fin.svg" alt="hojas con ilustraciones">
+        <img class="animate-on-scroll" style="opacity: 0;" data-animate="animate__fadeInLeft" src="assets/img-modulo3/two-img-fin.svg" alt="hojas con ilustraciones">
       </div>
     </div>
 
