--- a/src/app/pages/components/crucigrama-act2/crucigrama-act2.component.scss
+++ b/src/app/pages/components/crucigrama-act2/crucigrama-act2.component.scss
@@ -90,3 +90,11 @@
     overflow: auto;
   }
 }
+
+.respInc{
+  border: 2px solid #d9534f !important;
+}
+
+.respCor{
+  border: 2px solid #419941 !important;
+}
