--- a/src/app/pages/components/crucigrama/crucigrama.component.scss
+++ b/src/app/pages/components/crucigrama/crucigrama.component.scss
@@ -30,7 +30,6 @@
     text-transform: uppercase;
     margin-bottom: 3px;
     margin-right: 2px;
-    background-color: rgb(255 255 255);
     border-radius: 5px;
     border: 2px solid black;
     position: unset;
@@ -90,3 +89,12 @@
     overflow: auto;
   }
 }
+
+.respInc{
+  border: 2px solid #d9534f !important;
+}
+
+.respCor{
+  border: 2px solid #419941 !important;
+}
+
