--- a/src/app/pages/page/modulo1/modulo1.component.html
+++ b/src/app/pages/page/modulo1/modulo1.component.html
@@ -587,16 +587,17 @@
           <img data-animate="animate__fadeInLeft" class="img-piramides animate-on-scroll" style="opacity: 0;"
             src="assets/piramides.svg" alt="piramides">
         </div>
-        <div data-animate="animate__fadeInRight" class="col d-flex flex-column justify-content-center animate-on-scroll" style="opacity: 0;">
-          <img class="img-templos"
-            src="assets/templo.svg" alt="templo">
+        <div data-animate="animate__fadeInRight" class="col d-flex flex-column justify-content-center animate-on-scroll"
+          style="opacity: 0;">
+          <img class="img-templos" src="assets/templo.svg" alt="templo">
           <h2 class="inf-add-mx text-end">Información Adicional: Cooperativismo en México.</h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-12">
-          <div data-animate="animate__fadeIn" class="card-inf-prehispanica animate-on-scroll" style="margin: 20px auto; opacity: 0;">
+          <div data-animate="animate__fadeIn" class="card-inf-prehispanica animate-on-scroll"
+            style="margin: 20px auto; opacity: 0;">
             <p>
               En la época Prehispánica, en
               la Gran Tenochtitlan de México
@@ -631,10 +632,12 @@
           </div>
         </div>
         <div class="col-md-1 d-none d-md-flex align-items-center flex-wrap">
-          <img data-animate="animate__fadeInLeft" class="flecha-derecha animate-on-scroll" style="opacity: 0; animation-delay: 1s;" src="assets/flecha-derecha-blanca.svg" alt="flecha derecha blanca">
+          <img data-animate="animate__fadeInLeft" class="flecha-derecha animate-on-scroll"
+            style="opacity: 0; animation-delay: 1s;" src="assets/flecha-derecha-blanca.svg" alt="flecha derecha blanca">
         </div>
         <div class="col-12 col-md-5 d-flex justify-content-center align-items-center">
-          <div data-animate="animate__fadeInLeft" class="card-colonial animate-on-scroll" style="opacity: 0; animation-delay: 2s;">
+          <div data-animate="animate__fadeInLeft" class="card-colonial animate-on-scroll"
+            style="opacity: 0; animation-delay: 2s;">
             <p>
               Durante la época
               funcionaban los “pósitos” que
@@ -660,7 +663,8 @@
   <section class="elias_calles" style="overflow: hidden;">
 
     <div class="container">
-      <div data-animate="animate__slideInDown" class="hoja-cuaderno animate-on-scroll" style="opacity: 0;" style="margin: 30px auto;">
+      <div data-animate="animate__slideInDown" class="hoja-cuaderno animate-on-scroll" style="opacity: 0;"
+        style="margin: 30px auto;">
         <p>
           El Crédito Cooperativo ha existido en México desde finales del siglo XIX y
           principios del siglo XX, a través de Cajas de Ahorro Rurales que tuvieron como
@@ -681,7 +685,8 @@
         </p>
       </div>
 
-      <img data-animate="animate__zoomInDown" class="cinta-precidente animate-on-scroll" src="assets/presidente.svg" alt="presidente Plutarco Elías Calles">
+      <img data-animate="animate__zoomInDown" class="cinta-precidente animate-on-scroll" src="assets/presidente.svg"
+        alt="presidente Plutarco Elías Calles">
 
       <div data-animate="animate__fadeInUp" class="epoca-pos animate-on-scroll" style="margin: 30px 0; opacity: 0;">
         <p>
@@ -904,13 +909,16 @@
 
       <div class="row">
         <div class="col-12 col-md-4">
-          <h2 data-animate="animate__fadeInRight" class="simbolos-title text-center animate-on-scroll" style="opacity: 0;">SÍMBOLOS</h2>
+          <h2 data-animate="animate__fadeInRight" class="simbolos-title text-center animate-on-scroll"
+            style="opacity: 0;">SÍMBOLOS</h2>
         </div>
         <div class="col-12 col-md-4">
-          <h2 data-animate="animate__fadeInRight" class="bandera text-center animate-on-scroll" style="opacity: 0;">BANDERA</h2>
+          <h2 data-animate="animate__fadeInRight" class="bandera text-center animate-on-scroll" style="opacity: 0;">
+            BANDERA</h2>
         </div>
         <div class="d-none d-md-flex col-md-4">
-          <img data-animate="animate__fadeInRight" src="assets/bandera-top.svg" class="bandera-top animate-on-scroll" style="opacity: 0;">
+          <img data-animate="animate__fadeInRight" src="assets/bandera-top.svg" class="bandera-top animate-on-scroll"
+            style="opacity: 0;">
         </div>
       </div>
 
@@ -953,13 +961,20 @@
         </p>
 
         <ul>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #dd3c14; opacity: 0; animation-delay: 0.2s;">Rojo: La universalidad.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #dda80e; opacity: 0; animation-delay: 0.4s;">Anaranjado: La democracia.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #dcdd3b; opacity: 0; animation-delay: 0.6s;">Amarillo: La justicia.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #09913d; opacity: 0; animation-delay: 0.8s;">Verde: La economía.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #1c8ecc; opacity: 0; animation-delay: 1s;">AZUL turquesa: La difusión.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #2b307a; opacity: 0; animation-delay: 1.2s;">Azul: La unidad.</li>
-          <li data-animate="animate__fadeInLeft" class="animate-on-scroll" style="background-color: #6a3a70; opacity: 0; animation-delay: 1.4s;">Violeta:talibertad.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #dd3c14; opacity: 0; animation-delay: 0.2s;">Rojo: La universalidad.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #dda80e; opacity: 0; animation-delay: 0.4s;">Anaranjado: La democracia.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #dcdd3b; opacity: 0; animation-delay: 0.6s;">Amarillo: La justicia.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #09913d; opacity: 0; animation-delay: 0.8s;">Verde: La economía.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #1c8ecc; opacity: 0; animation-delay: 1s;">AZUL turquesa: La difusión.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #2b307a; opacity: 0; animation-delay: 1.2s;">Azul: La unidad.</li>
+          <li data-animate="animate__fadeInLeft" class="animate-on-scroll"
+            style="background-color: #6a3a70; opacity: 0; animation-delay: 1.4s;">Violeta:talibertad.</li>
         </ul>
 
         <p>
@@ -967,7 +982,8 @@
           e identificación del movimiento Cooperativo.
         </p>
 
-        <img data-animate="animate__fadeInLeft" class="bandera-bottom animate-on-scroll" style="opacity: 0;" src="assets/bandera_blanca.svg" alt="bandera blanca">
+        <img data-animate="animate__fadeInLeft" class="bandera-bottom animate-on-scroll" style="opacity: 0;"
+          src="assets/bandera_blanca.svg" alt="bandera blanca">
 
       </div>
 
@@ -1045,7 +1061,68 @@
   </section>
 
 
+  <section class="otros-simbolos">
+    <div class="container">
 
+      <div class="hoja-rosa px-4 py-5">
+
+        <div class="row align-items-center">
+          <div class="col-sm-6"><img src="assets/img-modulo1/Recurso 3.svg" alt=""></div>
+          <div class="col-sm-6"><img style="width: 100%;" src="assets/img-modulo1/Recurso 4.png" alt=""></div>
+        </div>
+
+        <div style="background-color: azure;" class="rounded p-3 mb-2">
+          <h2>El puerquito de alcancía.</h2>
+          <p>En la Edad Media (dentro de la creencia cristiana) los cerdos eran sinónimo de
+            prosperidad, era tal su significado que se creía que las familias que poseían uno de
+            éstos, podían vivir despreocupadamente, pues la guerra, malas cosechas o
+            infortunios económicos se podían superar gracias a este mamífero. En ese tiempo,
+            comer carne de cerdo era un privilegio, por ende, el animal era muy valioso, vivo
+            o listo para servirse en la mesa.</p>
+          <p>Los cerditos representaban el resultado de sus esfuerzos para adquirirlo; al poseerlo
+            sabían que tenían que cuidarlo para obtener beneficios, era como tener ahorros a
+            disposición en caso de necesitarse, pues del cerdito se puede aprovechar casi
+            todo y ya sea para venderlo o cocinarlo, era considerado una fuente de
+            seguridad económica y estatus para las familias.</p>
+          <p>De esta forma, el concepto de alcancía se fue desarrollando hasta nuestros días,
+            siendo una figura que representa dinero, esfuerzo y posibilidades; se ha convertido
+            en todo un sistema de ahorro para chicos y grandes. Entonces, por todo lo
+            mencionado anteriormente, es que el puerquito se convirtió en un símbolo del
+            Ahorro y de las Cooperativas.</p>
+        </div>
+
+        <div style="background-color: azure;" class="rounded">
+
+          <div class="row align-items-center justify-content-center p-3 mb-2">
+            <div class="col-sm-6">
+              <h2>Primer logo de las Cooperativas.</h2>
+              <p>El primer logotipo representativo que se tuvo era un
+                “rancherito” con una alcancía en forma de
+                puerquito en sus manos. Éste fue utilizado por todas
+                las Cajas a nivel nacional.</p>
+            </div>
+            <div class="col-sm-6"> <img style="width: 100%;" src="assets/img-modulo1/Recurso 5.png" alt=""></div>
+          </div>
+
+        </div>
+
+        <div style="background-color: azure;" class="rounded">
+          <div class="row align-items-center justify-content-center p-3 mb-2">
+            <div class="col-sm-6">
+              <h2>Distintivo de Manos con los Pinos</h2>
+              <p>Representa la solidaridad, con la participación de
+                todos los cooperativistas dando apoyo y unión. Lo
+                que se traduce a una hermandad y necesidad de
+                trabajo en conjunto.</p>
+            </div>
+            <div class="col-sm-6"> <img style="width: 100%;" src="assets/img-modulo1/Recurso 5.png" alt=""></div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
 
 
   <div class="container">
