--- a/src/app/pages/page/modulo2/modulo2.component.html
+++ b/src/app/pages/page/modulo2/modulo2.component.html
@@ -638,8 +638,6 @@
       </div>
 
     </div>
-
-
   </section>
 
 
@@ -663,9 +661,7 @@
         </div>
       </div>
 
-
     </div>
-
   </section>
 
   <div class="actividad2-crucigrama">
@@ -732,7 +728,7 @@
 
           </ul>
 
-          <input id="btnComenzar" (click)="changeStyles('mostrarCrucigrama')" type="button" value="Verificar respuestas"
+          <input id="btnComenzar" (click)="changeStyles('mostrarCrucigrama')" type="button" value="Iniciar actividad"
             class="mb-5">
 
         </div>
