--- a/src/app/pages/page/modulo4/modulo4.component.html
+++ b/src/app/pages/page/modulo4/modulo4.component.html
@@ -785,10 +785,10 @@
           <div class="links animate-on-scroll" data-animate="animate__fadeInUp">
             <p class="text-white">Para conocer más de cada uno de los créditos consulta en el sitio de la Cooperativa:
             </p>
-            <a href="https://www.libertadsanpablo.com/">libertadsanpablo.com</a>
+            <a href="https://www.cajasanpablo.com/">cajasanpablo.com</a>
             <!-- TODO: HACE FALTA EL LINK DE SUCURSALES -->
             <p class="text-white">También, puedes asistir con un analista de tu sucursal más cercana.</p>
-            <a href="https://www.libertadsanpablo.com/servicio/creditos">Sucursales</a>
+            <a href="https://www.cajasanpablo.com/servicio/creditos">Sucursales</a>
           </div>
 
           <h2 class="animate-on-scroll" data-animate="animate__fadeInLeft">Ahorro</h2>
