--- a/src/app/pages/page/modulo6/modulo6.component.html
+++ b/src/app/pages/page/modulo6/modulo6.component.html
@@ -577,7 +577,7 @@
         </div>
 
 
-        <a href="https://www.libertadsanpablo.com/servicio/creditos"> https://www.libertadsanpablo.com
+        <a href="https://www.cajasanpablo.com/servicio/creditos"> https://www.cajasanpablo.com
           /servicio/creditos
         </a>
 
