--- a/src/app/pages/components/crucigrama/crucigrama.component.html
+++ b/src/app/pages/components/crucigrama/crucigrama.component.html
@@ -13,20 +13,29 @@
           <ng-container *ngIf="enable.includes(fila + '_' + columna)">
             <input
             [formControlName]="fila + '_' + columna"
+            [ngClass]="{
+  'respCor': submitted && evaluarRespuesta(fila + '_' + columna) === true,
+  'respInc': submitted && evaluarRespuesta(fila + '_' + columna) === false
+}"
             class="casilla"
             type="text"
             maxlength="1"
-            id="fila{{fila}}C{{columna}}">
+            id="fila{{fila}}C{{columna}}"
+            >
           </ng-container>
           <ng-container *ngIf="placeholders[fila + '_' + columna] as placeholder">
             <div class="input-placeholder">
               <small>{{placeholder}}</small>
               <input
+              [ngClass]="{
+  'respCor': submitted && evaluarRespuesta(fila + '_' + columna) === true,
+  'respInc': submitted && evaluarRespuesta(fila + '_' + columna) === false
+}"
               class="casilla"
               type="text" maxlength="1"
               id="fila{{fila}}C{{columna}}"
               [formControlName]="fila + '_' + columna"
-              (blur)="checkInputValue($event)">
+              >
             </div>
         </ng-container>
         </td>
