--- a/src/app/pages/page/modulo1/modulo1.component.scss
+++ b/src/app/pages/page/modulo1/modulo1.component.scss
@@ -1,5 +1,3 @@
-
-
 * {
   font-family: "Century Gothic", Times, sans-serif;
 }
@@ -102,6 +100,7 @@
 .container__titulo {
   margin: 50px auto;
   padding: 20px 0;
+
   h1 {
     margin: auto;
     max-width: 800px;
@@ -922,6 +921,7 @@ $base-image-path: '../../../../assets/';
     @include custom-background("info-add-hoja.svg", center, 695px);
     margin-bottom: 60px;
     padding: 25px 50px 10px 25px;
+
     .text-content {
       h2 {
         font-size: 2.3rem;
@@ -940,7 +940,7 @@ $base-image-path: '../../../../assets/';
   @include custom-background("mundo.svg", center);
   overflow: hidden;
 
-  p{
+  p {
     font-size: 18px;
     text-align: justify;
   }
@@ -953,6 +953,7 @@ $base-image-path: '../../../../assets/';
 
   .hoja1 {
     @include custom-background("hoja-izq.svg", center);
+
     p {
       padding: 30px 20px;
       text-align: justify;
@@ -961,6 +962,7 @@ $base-image-path: '../../../../assets/';
 
   .hoja2 {
     @include custom-background("hoja-der.svg", center);
+
     p {
       padding: 20px 25px;
       text-align: justify;
@@ -969,6 +971,7 @@ $base-image-path: '../../../../assets/';
 
   .hoja3 {
     @include custom-background("hoja-abajo.svg", center, 550px);
+
     p {
       padding: 30px 17px;
       text-align: justify;
@@ -1005,7 +1008,7 @@ $base-image-path: '../../../../assets/';
   @include custom-background("hoja-naranja.svg");
   padding: 80px 15px;
 
-  p{
+  p {
     text-align: justify;
   }
 
@@ -1048,7 +1051,8 @@ $base-image-path: '../../../../assets/';
 
 .elias_calles {
   @include custom-background("hoja-naranja-vert.svg");
-  p{
+
+  p {
     text-align: justify
   }
 
@@ -1108,7 +1112,8 @@ $base-image-path: '../../../../assets/';
 
 .simbolos {
   background-color: #1e9fa5;
-  p{
+
+  p {
     text-align: justify;
   }
 
@@ -1184,10 +1189,17 @@ $base-image-path: '../../../../assets/';
     .text-desc {
       padding: 50px 40px 80px 40px;
       background-color: white;
-      p{
+
+      p {
         text-align: justify;
       }
     }
+  }
+}
+
+.otros-simbolos {
+  .hoja-rosa {
+    @include custom-background("img-modulo1/Recurso 2.svg", left);
   }
 }
 
@@ -1472,8 +1484,8 @@ $base-image-path: '../../../../assets/';
 
 /* Extra grande (XL): */
 @media (min-width: 1200px) {
-  .que_es_cooperativismo{
-    .hojasup{
+  .que_es_cooperativismo {
+    .hojasup {
       padding: 70px 20px;
     }
   }
