--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -18,12 +18,12 @@
 
       <div class="box__footer d-flex flex-column col text-center text-md-start">
         <h2>ENLACES WEB</h2>
-        <a href="https://www.libertadsanpablo.com/#/aviso" target="_blank">Aviso de Privacidad</a>
+        <a href="https://www.cajasanpablo.com/#/aviso" target="_blank">Aviso de Privacidad</a>
         <a href="https://www.gob.mx/condusef" target="_blank">Condusef</a>
-        <a href="https://www.libertadsanpablo.com/assets/pdf/unidad-especializada.pdf" target="_blank">Unidad Especializada De Atención a Socios</a>
-        <a href="https://www.libertadsanpablo.com/assets/pdf/DespachosDeCobranza.pdf" target="_blank">Despachos De Cobranza Externos</a>
-        <a href="https://www.libertadsanpablo.com/assets/pdf/derechos_arco.pdf" target="_blank">Derechos Arco</a>
-        <a href="https://www.libertadsanpablo.com/assets/pdf/CostosYComiciones_Septiembre-2023.pdf" target="_blank">Costos y Comisiones</a>
+        <a href="https://www.cajasanpablo.com/assets/pdf/unidad-especializada.pdf" target="_blank">Unidad Especializada De Atención a Socios</a>
+        <a href="https://www.cajasanpablo.com/assets/pdf/DespachosDeCobranza.pdf" target="_blank">Despachos De Cobranza Externos</a>
+        <a href="https://www.cajasanpablo.com/assets/pdf/derechos_arco.pdf" target="_blank">Derechos Arco</a>
+        <a href="https://www.cajasanpablo.com/assets/pdf/CostosYComiciones_Septiembre-2023.pdf" target="_blank">Costos y Comisiones</a>
       </div>
 
       <div class="box__footer d-flex flex-column col text-center text-md-start justify-content-center">
